# seismiq

./: .gitignore  .pre-commit-config.yaml  NOTICE  README.md  pyproject.toml
configs/: data_casmi.yaml  seismiq_finetuned.yaml  seismiq_pretrained.yaml
notebooks/: confidence_intervals.ipynb  figures.ipynb  sirius_ranking.ipynb
resources/examples/: casmi_2016_5.json  reaction_smiles.txt  reaction_templates.txt  training_data_20.csv
scripts/: cfm_id_docker.sh  fraggenie.sh
seismiq/database/: data_cleaning.py  database.py  database_predict.py  download_gnps.py  find_adducts_and_shifts.py  import_into_db.py
seismiq/impurity_simulation/: extract_template.py  extract_template_dump_cc.py  template_impurity_prediction.py
seismiq/prediction/: eval_on_fragments.py  eval_on_test_datasets.py  layers.py  predict.py  train.py
seismiq/prediction/data/: preparation.py  sample.py  storage.py  test_datasets.py
seismiq/prediction/llm/: data_module.py  model_loading.py  sampling.py  tokenizers.py  training_module.py
seismiq/utils/: config.py  mol_utils.py  parallel_utils.py  rdkit_wrapper.py
test/impurity_simulation/: test_extract_template.py  test_template_impurity_prediction.py
test/seismiq/prediction/: conftest.py  test_eval_on_fragments.py  test_eval_on_test_datasets.py  test_train.py
test/seismiq/prediction/llm/: test_model_loading.py
