[tool.poetry]
name = "SEISMiQ"
version = "0.1.0"
description = ""
authors = ["Emilio Dorigatti <emilio.dorigatti@boehringer-ingelheim.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "*"
stmol = "*"
rdkit = "2023.09.5"
torch = "2.7.1"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
pandas = "^2.2.2"
numpy = "<2"
scipy = "^1.14.0"
tqdm = "^4.66.4"
deepsmiles = "^1.0.1"
selfies = "^2.1.2"
lightning = "^2.3.3"
pysmilesutils = {git = "https://github.com/MolecularAI/pysmilesutils"}
pydal = "^20240713.1"
scikit-learn = "^1.5.1"
umap-learn = "^0.5.6"
pymzml = "^2.5.10"
statsmodels = "*"
jsonargparse = {version = ">=4.27.7", extras = ["signatures"]}
omegaconf = "^2.3.0"
pynvml = "^11.5.3"
pyteomics = "^4.7.3"
loguru = "^0.7.2"
click = "^8.1.7"
pathlib = "^1.0.1"
safe-mol = "^0.1.13"
rxnmapper = "^0.4.0"
rdchiral = "^1.1.0"

[tool.poetry.group.dev.dependencies]
types-requests = "*"
pylint = "^2.15.10"
ipykernel = "^6.20.2"
jupyter = "^1.0.0"
ipywidgets = "^8.1.3"
tox = "^4.14.2"
pytest = "^8.1.1"
pytest-sugar = "^1.0.0"
pytest-cov = "^5.0.0"
mypy = "^1.9.0"
ruff = "^0.3.4"
isort = "^5.13.2"
httpx = "^0.27.0"
pandas-stubs = "^2.2.1.240316"
pre-commit = "^3.8.0"
tensorboard = "^2.17.0"
types-tqdm = "^4.66.0.20240417"
types-PyYAML = "*"
pyright = "^1.1.374"
spython = "^0.3.13"
ipdb = "^0.13.13"
python-dotenv = "^1.0.1"
memray = "^1.14.0"
pdbpp = "^0.10.3"
snakeviz = "^2.2.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4
include= [
    "seismiq/**/*.py",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I", 
]
ignore = [
    "E722",  # do not use bare `except`
    "B007",  # loop control var not used in loop body
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = false
disallow_any_generics = true
explicit_package_bases = true
exclude = [
]

[[tool.mypy.overrides]]
module = [
    "rdkit.*", "transformers.*", "selfies.*", "deepsmiles.*", "pydal.*", "pysmilesutils.*",
    "pyteomics.*", "sklearn.*", "seaborn.*", "scipy.*", "umap.*", "mlflow.*",
    "rdkit.Chem.*", "rdkit.Chem.Draw.*", "streamlit_extras.*", "pyarrow.*"
]
ignore_missing_imports = true
disable_error_code = ["attr-defined", "call-arg"]
